stopwatch readme added

--- a/watchstopJS-master/index.html
+++ b/watchstopJS-master/index.html
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>Matheus Kiyoshi Ferreira</p>
+        <p>By FrontendWorld</p>
     </footer>
 
     <script src="script.js"></script>
