--- a/Youtube-Clone/index.html
+++ b/Youtube-Clone/index.html
@@ -21,7 +21,7 @@
     rel="stylesheet">
 
 
-  <link rel="stylesheet" href="css/all.css">
+  <link rel="stylesheet" href="CSS/all.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap" rel="stylesheet">
